# MagicRenderView

./: .gitignore  .gitmodules  CMakeLists.txt  Folder.DotSettings  README.en.md  README.md
srcs/cpp/MagicRenderView/: CMakeLists.txt
srcs/cpp/MagicRenderView/cmake_generate/translations/auto/: MagicRenderView_en.ts  MagicRenderView_zh_CN.ts
srcs/cpp/MagicRenderView/cmake_generate/translations/default/: MagicRenderView.ts
srcs/cpp/MagicRenderView/qrc/: actionIcon.qrc  font.qrc  image.qrc  nodeItemIcon.qrc  resource.qrc
srcs/cpp/MagicRenderView/resources/appMr/: MagicRenderView.mr
srcs/cpp/MagicRenderView/srcs/: main.cpp  mainCallFunction.cpp  mainCallFunction.h
srcs/cpp/MagicRenderView/srcs/alias/: type_alias.cpp  type_alias.h
srcs/cpp/MagicRenderView/srcs/app/: application.cpp  application.h  nodeDirector.cpp  nodeDirector.h  printfInfo.cpp
srcs/cpp/MagicRenderView/srcs/app/applicationInstance/: application.cpp  application.h
srcs/cpp/MagicRenderView/srcs/app/printfInfo/: printfInfo.cpp  printfInfo.h
srcs/cpp/MagicRenderView/srcs/define/: castMacro.cpp  castMacro.h  macro.cpp  macro.h  nodeFrinedClass.cpp  nodeFrinedClass.h  portFrinedClass.cpp  portFrinedClass.h  stackTypeMacro.cpp  stackTypeMacro.h
srcs/cpp/MagicRenderView/srcs/director/: appDirector.cpp  appDirector.h  builderDirector.cpp  builderDirector.h  editorDirector.cpp  editorDirector.h  iniDirector.cpp  iniDirector.h  menuDirector.cpp  menuDirector.h  nodeDirector.cpp  nodeDirector.h  nodeInfoEditorDirector.cpp  nodeInfoEditorDirector.h  printerDirector.cpp  printerDirector.h  renderImageDirector.cpp  renderImageDirector.h  testDirector.cpp  testDirector.h  varDirector.cpp  varDirector.h
srcs/cpp/MagicRenderView/srcs/enums/: builderEnum.cpp  builderEnum.h  inputPortType.cpp  inputPortType.h  nodeEnum.cpp  nodeEnum.h  outputPortType.cpp  outputPortType.h  typeEnum.cpp  typeEnum.h  widgetEnum.cpp  widgetEnum.h
srcs/cpp/MagicRenderView/srcs/main/: main.cpp
srcs/cpp/MagicRenderView/srcs/menu/: createNodeMenu.cpp  createNodeMenu.h  editorNodeMenu.cpp  editorNodeMenu.h  freeMenu.cpp  freeMenu.h  windowMenu.cpp  windowMenu.h
srcs/cpp/MagicRenderView/srcs/menu/app/: normalApplicationMenu.cpp  normalApplicationMenu.h  normalApplicationToolBar.cpp  normalApplicationToolBar.h
srcs/cpp/MagicRenderView/srcs/menu/edit/: normalNodeEditorPropertyMenu.cpp  normalNodeEditorPropertyMenu.h
srcs/cpp/MagicRenderView/srcs/menu/generateNode/: normalGenerateNodeMenu.cpp  normalGenerateNodeMenu.h
srcs/cpp/MagicRenderView/srcs/menuStack/app/: applicationMenuStack.cpp  applicationMenuStack.h
srcs/cpp/MagicRenderView/srcs/menuStack/edit/: editorNodeMenuStack.cpp  editorNodeMenuStack.h
srcs/cpp/MagicRenderView/srcs/menuStack/generateNode/: generateNodeMenuStack.cpp  generateNodeMenuStack.h
srcs/cpp/MagicRenderView/srcs/node/: nodeNameSpace.cpp  nodeNameSpace.h  nodeStack.cpp  nodeStack.h
srcs/cpp/MagicRenderView/srcs/node/node/: arrayNode.cpp  arrayNode.h  beginNode.cpp  beginNode.h  cacheNode.cpp  cacheNode.h  callNode.cpp  callNode.h  createNode.cpp  createNode.h  endNode.cpp  endNode.h  foreachNode.cpp  foreachNode.h  functionNode.cpp  functionNode.h  generateNode.cpp  generateNode.h  jumpNode.cpp  jumpNode.h  logicNode.cpp  logicNode.h  node.cpp  node.h  pointNode.cpp  pointNode.h  processNode.cpp  processNode.h  unityNode.cpp  unityNode.h
srcs/cpp/MagicRenderView/srcs/node/nodeAfterEffect/: nodeAfterEffect.cpp  nodeAfterEffect.h
srcs/cpp/MagicRenderView/srcs/node/nodeEventInfo/: nodeRefLinkInfo.cpp
srcs/cpp/MagicRenderView/srcs/node/nodeInfo/: inputportLinkOutputPortInfo.cpp  inputportLinkOutputPortInfo.h  nodeBuilderStream.cpp  nodeBuilderStream.h  nodeBuilderTools.cpp  nodeBuilderTools.h  nodeClickInfo.cpp  nodeClickInfo.h  nodeHistory.cpp  nodeHistory.h  nodePortLinkActionPair.cpp  nodePortLinkActionPair.h  nodePortLinkInfo.cpp  nodePortLinkInfo.h  nodeRefLinkInfo.cpp  nodeRefLinkInfo.h  nodeRunInfo.cpp  nodeRunInfo.h  nodeStyleTypePen.cpp  nodeStyleTypePen.h  nodeWidgetInfoTools.cpp  nodeWidgetInfoTools.h
srcs/cpp/MagicRenderView/srcs/node/nodeInfoWidget/: nodeInfoWidget.cpp  nodeInfoWidget.h
srcs/cpp/MagicRenderView/srcs/srack/: srackInfo.cpp  srackInfo.h
srcs/cpp/MagicRenderView/srcs/testCode/: testCodeSources.cpp  testCodeSources.h
srcs/cpp/MagicRenderView/srcs/tools/: NodeRunLinkTools.cpp  NodeRunLinkTools.h  aliasType.cpp  aliasType.h  arrayTools.cpp  arrayTools.h  baseOperationTools.cpp  baseOperationTools.h  enumTools.cpp  enumTools.h  imageTools.cpp  imageTools.h  infoTool.cpp  infoTool.h  nodeTools.cpp  nodeTools.h  path.cpp  path.h  pathTools.cpp  pathTools.h  qstringTools.cpp  qstringTools.h  varDirectorTools.cpp  varDirectorTools.h  vectorTools.cpp  vectorTools.h
srcs/cpp/MagicRenderView/srcs/type/: infoStack.cpp  infoStack.h  varGenerate.cpp  varGenerate.h
srcs/cpp/MagicRenderView/srcs/validator/: binValidator.cpp  binValidator.h  decValidator.cpp  decValidator.h  hexValidator.cpp  hexValidator.h  octValidator.cpp  octValidator.h  signedValidator.cpp  signedValidator.h  unSignedValidator.cpp  unSignedValidator.h  validator.cpp  validator.h
srcs/cpp/MagicRenderView/srcs/widget/: aboutApplicationScrollArea.cpp  aboutApplicationScrollArea.h  aboutApplicationWidget.cpp  aboutApplicationWidget.h  drawHighlightWidget.cpp  drawHighlightWidget.h  drawLinkWidget.cpp  drawLinkWidget.h  drawNodeWidget.cpp  drawNodeWidget.h  mainWidget.cpp  mainWidget.h  mainWidgetScrollArea.cpp  mainWidgetScrollArea.h
srcs/cpp/MagicRenderView/srcs/win/: aboutApplicationWindow.cpp  aboutApplicationWindow.h  mainWindow.cpp  mainWindow.h
(+3235 files in other folders)
